@@ -1,6 +1,6 @@
 /* tc-ia64.c -- Assembler for the HP/Intel IA-64 architecture.
    Copyright 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
-   2008, 2009, 2011   Free Software Foundation, Inc.
+   2008, 2009   Free Software Foundation, Inc.
    Contributed by David Mosberger-Tang <davidm@hpl.hp.com>
 
    This file is part of GAS, the GNU Assembler.
@@ -103,9 +103,6 @@ enum reloc_func
     FUNC_LT_DTP_RELATIVE,
     FUNC_LT_TP_RELATIVE,
     FUNC_IPLT_RELOC,
-#ifdef TE_VMS
-    FUNC_SLOTCOUNT_RELOC,
-#endif
   };
 
 enum reg_symbol
@@ -165,11 +162,6 @@ struct label_fix
   struct symbol *sym;
   bfd_boolean dw2_mark_labels;
 };
-
-#ifdef TE_VMS
-/* An internally used relocation.  */
-#define DUMMY_RELOC_IA64_SLOTCOUNT	(BFD_RELOC_UNUSED + 1)
-#endif
 
 /* This is the endianness of the current section.  */
 extern int target_big_endian;
@@ -583,9 +575,6 @@ pseudo_func[] =
     { NULL, 0, { 0 } },	/* placeholder for FUNC_LT_DTP_RELATIVE */
     { NULL, 0, { 0 } },	/* placeholder for FUNC_LT_TP_RELATIVE */
     { "iplt",	PSEUDO_FUNC_RELOC, { 0 } },
-#ifdef TE_VMS
-    { "slotcount", PSEUDO_FUNC_RELOC, { 0 } },
-#endif
 
     /* mbtype4 constants:  */
     { "alt",	PSEUDO_FUNC_CONST, { 0xa } },
@@ -614,7 +603,7 @@ pseudo_func[] =
     { "svr4",	PSEUDO_FUNC_CONST,	{ ELFOSABI_NONE } },
     { "hpux",	PSEUDO_FUNC_CONST,	{ ELFOSABI_HPUX } },
     { "nt",	PSEUDO_FUNC_CONST,	{ 2 } },		/* conflicts w/ELFOSABI_NETBSD */
-    { "linux",	PSEUDO_FUNC_CONST,	{ ELFOSABI_GNU } },
+    { "linux",	PSEUDO_FUNC_CONST,	{ ELFOSABI_LINUX } },
     { "freebsd", PSEUDO_FUNC_CONST,	{ ELFOSABI_FREEBSD } },
     { "openvms", PSEUDO_FUNC_CONST,	{ ELFOSABI_OPENVMS } },
     { "nsk",	PSEUDO_FUNC_CONST,	{ ELFOSABI_NSK } },
@@ -861,7 +850,7 @@ ia64_elf_section_letter (int letter, char **ptr_msg)
     return SHF_IA_64_VMS_GLOBAL;
 #endif
 
-  *ptr_msg = _("bad .section directive: want a,o,s,w,x,M,S,G,T in string");
+  *ptr_msg = _("Bad .section directive: want a,o,s,w,x,M,S,G,T in string");
   return -1;
 }
 
@@ -2558,7 +2547,7 @@ slot_index (unsigned long slot_addr,
 	    fragS *first_frag,
 	    int before_relax)
 {
-  unsigned long s_index = 0;
+  unsigned long index = 0;
 
   /* First time we are called, the initial address and frag are invalid.  */
   if (first_addr == 0)
@@ -2576,7 +2565,7 @@ slot_index (unsigned long slot_addr,
 	  /* We can get the final addresses only during and after
 	     relaxation.  */
 	  if (first_frag->fr_next && first_frag->fr_next->fr_address)
-	    s_index += 3 * ((first_frag->fr_next->fr_address
+	    index += 3 * ((first_frag->fr_next->fr_address
 			   - first_frag->fr_address
 			     - first_frag->fr_fix) >> 4);
 	}
@@ -2597,7 +2586,7 @@ slot_index (unsigned long slot_addr,
 	  case rs_align_test:
 	    /* Take alignment into account.  Assume the worst case
 	       before relaxation.  */
-	    s_index += 3 * ((1 << first_frag->fr_offset) >> 4);
+	    index += 3 * ((1 << first_frag->fr_offset) >> 4);
 	    break;
 
 	  case rs_org:
@@ -2607,14 +2596,14 @@ slot_index (unsigned long slot_addr,
 		break;
 	      }
 	  case rs_fill:
-	    s_index += 3 * (first_frag->fr_offset >> 4);
+	    index += 3 * (first_frag->fr_offset >> 4);
 	    break;
 	  }
 
       /* Add in the full size of the frag converted to instruction slots.  */
-      s_index += 3 * (first_frag->fr_fix >> 4);
+      index += 3 * (first_frag->fr_fix >> 4);
       /* Subtract away the initial part before first_addr.  */
-      s_index -= (3 * ((first_addr >> 4) - (start_addr >> 4))
+      index -= (3 * ((first_addr >> 4) - (start_addr >> 4))
 		+ ((first_addr & 0x3) - (start_addr & 0x3)));
 
       /* Move to the beginning of the next frag.  */
@@ -2630,9 +2619,9 @@ slot_index (unsigned long slot_addr,
     }
 
   /* Add in the used part of the last frag.  */
-  s_index += (3 * ((slot_addr >> 4) - (first_addr >> 4))
+  index += (3 * ((slot_addr >> 4) - (first_addr >> 4))
 	    + ((slot_addr & 0x3) - (first_addr & 0x3)));
-  return s_index;
+  return index;
 }
 
 /* Optimize unwind record directives.  */
@@ -4657,7 +4646,7 @@ dot_ln (int dummy ATTRIBUTE_UNUSED)
 }
 
 static void
-cross_section (int ref, void (*builder) (int), int ua)
+cross_section (int ref, void (*cons) (int), int ua)
 {
   char *start, *end;
   int saved_auto_align;
@@ -4702,15 +4691,15 @@ cross_section (int ref, void (*builder) (int), int ua)
   end = input_line_pointer + 1;		/* skip comma */
   input_line_pointer = start;
   md.keep_pending_output = 1;
-  section_count = bfd_count_sections (stdoutput);
+  section_count = bfd_count_sections(stdoutput);
   obj_elf_section (0);
-  if (section_count != bfd_count_sections (stdoutput))
+  if (section_count != bfd_count_sections(stdoutput))
     as_warn (_("Creating sections with .xdataN/.xrealN/.xstringZ is deprecated."));
   input_line_pointer = end;
   saved_auto_align = md.auto_align;
   if (ua)
     md.auto_align = 0;
-  (*builder) (ref);
+  (*cons) (ref);
   if (ua)
     md.auto_align = saved_auto_align;
   obj_elf_previous (0);
@@ -5316,9 +5305,9 @@ operand_width (enum ia64_opnd opnd)
 }
 
 static enum operand_match_result
-operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
+operand_match (const struct ia64_opcode *idesc, int index, expressionS *e)
 {
-  enum ia64_opnd opnd = idesc->operands[res_index];
+  enum ia64_opnd opnd = idesc->operands[index];
   int bits, relocatable = 0;
   struct insn_fix *fix;
   bfd_signed_vma val;
@@ -5488,7 +5477,7 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
     case IA64_OPND_CNT2a:
     case IA64_OPND_LEN4:
     case IA64_OPND_LEN6:
-      bits = operand_width (idesc->operands[res_index]);
+      bits = operand_width (idesc->operands[index]);
       if (e->X_op == O_constant)
 	{
 	  if ((bfd_vma) (e->X_add_number - 1) < ((bfd_vma) 1 << bits))
@@ -5562,7 +5551,7 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
 		e->X_op = O_symbol;
 	    }
 
-	  fix->opnd = idesc->operands[res_index];
+	  fix->opnd = idesc->operands[index];
 	  fix->expr = *e;
 	  fix->is_pcrel = 0;
 	  ++CURR_SLOT.num_fixups;
@@ -5597,7 +5586,7 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
     case IA64_OPND_MBTYPE4:
     case IA64_OPND_MHTYPE8:
     case IA64_OPND_POS6:
-      bits = operand_width (idesc->operands[res_index]);
+      bits = operand_width (idesc->operands[index]);
       if (e->X_op == O_constant)
 	{
 	  if ((bfd_vma) e->X_add_number < ((bfd_vma) 1 << bits))
@@ -5608,7 +5597,7 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
       break;
 
     case IA64_OPND_IMMU9:
-      bits = operand_width (idesc->operands[res_index]);
+      bits = operand_width (idesc->operands[index]);
       if (e->X_op == O_constant)
 	{
 	  if ((bfd_vma) e->X_add_number < ((bfd_vma) 1 << bits))
@@ -5684,14 +5673,14 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
     case IA64_OPND_IMM8M1U8:
     case IA64_OPND_IMM9a:
     case IA64_OPND_IMM9b:
-      bits = operand_width (idesc->operands[res_index]);
+      bits = operand_width (idesc->operands[index]);
       if (relocatable && (e->X_op == O_symbol
 			  || e->X_op == O_subtract
 			  || e->X_op == O_pseudo_fixup))
 	{
 	  fix = CURR_SLOT.fixup + CURR_SLOT.num_fixups;
 
-	  if (idesc->operands[res_index] == IA64_OPND_IMM14)
+	  if (idesc->operands[index] == IA64_OPND_IMM14)
 	    fix->code = BFD_RELOC_IA64_IMM14;
 	  else
 	    fix->code = BFD_RELOC_IA64_IMM22;
@@ -5703,7 +5692,7 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
 		e->X_op = O_symbol;
 	    }
 
-	  fix->opnd = idesc->operands[res_index];
+	  fix->opnd = idesc->operands[index];
 	  fix->expr = *e;
 	  fix->is_pcrel = 0;
 	  ++CURR_SLOT.num_fixups;
@@ -5809,7 +5798,7 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
 	    abort ();
 
 	  fix->code = ia64_gen_real_reloc_type (e->X_op_symbol, fix->code);
-	  fix->opnd = idesc->operands[res_index];
+	  fix->opnd = idesc->operands[index];
 	  fix->expr = *e;
 	  fix->is_pcrel = 1;
 	  ++CURR_SLOT.num_fixups;
@@ -5828,7 +5817,7 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
 	     create a dummy reloc.  This will not live past md_apply_fix.  */
 	  fix->code = BFD_RELOC_UNUSED;
 	  fix->code = ia64_gen_real_reloc_type (e->X_op_symbol, fix->code);
-	  fix->opnd = idesc->operands[res_index];
+	  fix->opnd = idesc->operands[index];
 	  fix->expr = *e;
 	  fix->is_pcrel = 1;
 	  ++CURR_SLOT.num_fixups;
@@ -5842,7 +5831,7 @@ operand_match (const struct ia64_opcode *idesc, int res_index, expressionS *e)
     case IA64_OPND_LDXMOV:
       fix = CURR_SLOT.fixup + CURR_SLOT.num_fixups;
       fix->code = BFD_RELOC_IA64_LDXMOV;
-      fix->opnd = idesc->operands[res_index];
+      fix->opnd = idesc->operands[index];
       fix->expr = *e;
       fix->is_pcrel = 0;
       ++CURR_SLOT.num_fixups;
@@ -7001,9 +6990,7 @@ IA-64 options:\n\
 			  unwind directive check (default -munwind-check=warning)\n\
   -mhint.b=[ok|warning|error]\n\
 			  hint.b check (default -mhint.b=error)\n\
-  -x | -xexplicit	  turn on dependency violation checking\n"), stream);
-  /* Note for translators: "automagically" can be translated as "automatically" here.  */
-  fputs (_("\
+  -x | -xexplicit	  turn on dependency violation checking\n\
   -xauto		  automagically remove dependency violations (default)\n\
   -xnone		  turn off dependency violation checking\n\
   -xdebug		  debug dependency violation checker\n\
@@ -7170,12 +7157,6 @@ md_begin (void)
   pseudo_func[FUNC_IPLT_RELOC].u.sym =
     symbol_new (".<iplt>", undefined_section, FUNC_IPLT_RELOC,
 		&zero_address_frag);
-
-#ifdef TE_VMS
-  pseudo_func[FUNC_SLOTCOUNT_RELOC].u.sym =
-    symbol_new (".<slotcount>", undefined_section, FUNC_SLOTCOUNT_RELOC,
-		&zero_address_frag);
-#endif
 
  if (md.tune != itanium1)
    {
@@ -7763,15 +7744,6 @@ ia64_parse_name (char *name, expressionS *e, char *nextcharP)
 	    }
 	  /* Skip ')'.  */
 	  ++input_line_pointer;
-#ifdef TE_VMS
-          if (idx == FUNC_SLOTCOUNT_RELOC)
-            {
-              /* @slotcount can accept any expression.  Canonicalize.  */
-              e->X_add_symbol = make_expr_symbol (e);
-              e->X_op = O_symbol;
-              e->X_add_number = 0;
-            }
-#endif
 	  if (e->X_op != O_symbol)
 	    {
 	      if (e->X_op != O_pseudo_fixup)
@@ -8389,9 +8361,9 @@ dep->name, idesc->name, (rsrc_write?"write":"read"), note)
 	      || (!rsrc_write && idesc->operands[1] == IA64_OPND_PMD_R3))
 
 	    {
-	      int reg_index = ((idesc->operands[1] == IA64_OPND_R3 && !rsrc_write)
-			       ? 1 : !rsrc_write);
-	      int regno = CURR_SLOT.opnd[reg_index].X_add_number - REG_GR;
+	      int index = ((idesc->operands[1] == IA64_OPND_R3 && !rsrc_write)
+			   ? 1 : !rsrc_write);
+	      int regno = CURR_SLOT.opnd[index].X_add_number - REG_GR;
 	      if (regno >= 0 && regno < NELEMS (gr_values)
 		  && KNOWN (regno))
 		{
@@ -8929,11 +8901,11 @@ dep->name, idesc->name, (rsrc_write?"write":"read"), note)
 		      if (idesc->operands[0] == IA64_OPND_CR3
 			  || idesc->operands[1] == IA64_OPND_CR3)
 			{
-			  int reg_index =
+			  int index =
 			    ((idesc->operands[0] == IA64_OPND_CR3)
 			     ? 0 : 1);
 			  int regno =
-			    CURR_SLOT.opnd[reg_index].X_add_number - REG_CR;
+			    CURR_SLOT.opnd[index].X_add_number - REG_CR;
 
 			  switch (regno)
 			    {
@@ -8967,15 +8939,15 @@ dep->name, idesc->name, (rsrc_write?"write":"read"), note)
 		      if (idesc->operands[0] == IA64_OPND_AR3
 			  || idesc->operands[1] == IA64_OPND_AR3)
 			{
-			  int reg_index =
+			  int index =
 			    ((idesc->operands[0] == IA64_OPND_AR3)
 			     ? 0 : 1);
 			  int regno =
-			    CURR_SLOT.opnd[reg_index].X_add_number - REG_AR;
+			    CURR_SLOT.opnd[index].X_add_number - REG_AR;
 
 			  if (regno == AR_ITC
 			      || regno == AR_RUC
-			      || (reg_index == 0
+			      || (index == 0
 				  && (regno == AR_RSC
 				      || (regno >= AR_K0
 					  && regno <= AR_K7))))
@@ -10827,13 +10799,13 @@ ia64_pcrel_from_section (fixS *fix, segT sec)
 void
 ia64_dwarf2_emit_offset (symbolS *symbol, unsigned int size)
 {
-  expressionS exp;
+  expressionS expr;
 
-  exp.X_op = O_pseudo_fixup;
-  exp.X_op_symbol = pseudo_func[FUNC_SEC_RELATIVE].u.sym;
-  exp.X_add_number = 0;
-  exp.X_add_symbol = symbol;
-  emit_expr (&exp, size);
+  expr.X_op = O_pseudo_fixup;
+  expr.X_op_symbol = pseudo_func[FUNC_SEC_RELATIVE].u.sym;
+  expr.X_add_number = 0;
+  expr.X_add_symbol = symbol;
+  emit_expr (&expr, size);
 }
 
 /* This is called whenever some data item (not an instruction) needs a
@@ -11137,11 +11109,6 @@ ia64_gen_real_reloc_type (struct symbol *sym, bfd_reloc_code_real_type r_type)
 	}
       break;
 
-#ifdef TE_VMS
-    case FUNC_SLOTCOUNT_RELOC:
-      return DUMMY_RELOC_IA64_SLOTCOUNT;
-#endif
-
     default:
       abort ();
     }
@@ -11288,7 +11255,7 @@ md_apply_fix (fixS *fix, valueT *valP, segT seg ATTRIBUTE_UNUSED)
     }
   if (fix->fx_addsy)
     {
-      switch ((unsigned) fix->fx_r_type)
+      switch (fix->fx_r_type)
 	{
 	case BFD_RELOC_UNUSED:
 	  /* This must be a TAG13 or TAG13b operand.  There are no external
@@ -11311,48 +11278,12 @@ md_apply_fix (fixS *fix, valueT *valP, segT seg ATTRIBUTE_UNUSED)
 	  S_SET_THREAD_LOCAL (fix->fx_addsy);
 	  break;
 
-#ifdef TE_VMS
-        case DUMMY_RELOC_IA64_SLOTCOUNT:
-	  as_bad_where (fix->fx_file, fix->fx_line,
-			_("cannot resolve @slotcount parameter"));
-	  fix->fx_done = 1;
-	  return;
-#endif
-
 	default:
 	  break;
 	}
     }
   else if (fix->tc_fix_data.opnd == IA64_OPND_NIL)
     {
-#ifdef TE_VMS
-      if (fix->fx_r_type == DUMMY_RELOC_IA64_SLOTCOUNT)
-        {
-          /* For @slotcount, convert an addresses difference to a slots
-             difference.  */
-          valueT v;
-
-          v = (value >> 4) * 3;
-          switch (value & 0x0f)
-            {
-            case 0:
-            case 1:
-            case 2:
-              v += value & 0x0f;
-              break;
-            case 0x0f:
-              v += 2;
-              break;
-            case 0x0e:
-              v += 1;
-              break;
-            default:
-              as_bad (_("invalid @slotcount value"));
-            }
-          value = v;
-        }
-#endif
-
       if (fix->tc_fix_data.bigendian)
 	number_to_chars_bigendian (fixpos, value, fix->fx_size);
       else
@@ -11472,13 +11403,13 @@ ia64_handle_align (fragS *fragp)
 {
   int bytes;
   char *p;
-  const unsigned char *nop_type;
+  const unsigned char *nop;
 
   if (fragp->fr_type != rs_align_code)
     return;
 
   /* Check if this frag has to end with a stop bit.  */
-  nop_type = fragp->tc_frag_data ? le_nop_stop : le_nop;
+  nop = fragp->tc_frag_data ? le_nop_stop : le_nop;
 
   bytes = fragp->fr_next->fr_address - fragp->fr_address - fragp->fr_fix;
   p = fragp->fr_literal + fragp->fr_fix;
@@ -11515,7 +11446,7 @@ ia64_handle_align (fragS *fragp)
     }
 
   /* Instruction bundles are always little-endian.  */
-  memcpy (p, nop_type, 16);
+  memcpy (p, nop, 16);
   fragp->fr_var = 16;
 }
 
@@ -11768,6 +11699,7 @@ ia64_vms_note (void)
   char *p;
   asection *seg = now_seg;
   subsegT subseg = now_subseg;
+  Elf_Internal_Note i_note;
   asection *secp = NULL;
   char *bname;
   char buf [256];
@@ -11780,27 +11712,39 @@ ia64_vms_note (void)
 			 secp,
 			 SEC_HAS_CONTENTS | SEC_READONLY);
 
-  /* Module header note (MHD).  */
+  /* Module header note.  */
   bname = xstrdup (lbasename (out_file_name));
   if ((p = strrchr (bname, '.')))
     *p = '\0';
-  
-  /* VMS note header is 24 bytes long.  */
-  p = frag_more (8 + 8 + 8);
-  number_to_chars_littleendian (p + 0, 8, 8);
-  number_to_chars_littleendian (p + 8, 40 + strlen (bname), 8);
-  number_to_chars_littleendian (p + 16, NT_VMS_MHD, 8);
+
+  i_note.namesz = 8;
+  i_note.descsz = 40 + strlen (bname);
+  i_note.type = NT_VMS_MHD;
+
+  p = frag_more (sizeof (i_note.namesz));
+  number_to_chars_littleendian (p, i_note.namesz, 8);
+
+  p = frag_more (sizeof (i_note.descsz));
+  number_to_chars_littleendian (p, i_note.descsz, 8);
+
+  p = frag_more (sizeof (i_note.type));
+  number_to_chars_littleendian (p, i_note.type, 8);
 
   p = frag_more (8);
   strcpy (p, "IPF/VMS");
 
-  p = frag_more (17 + 17 + strlen (bname) + 1 + 5);
-  get_vms_time (p);
-  strcpy (p + 17, "24-FEB-2005 15:00");
-  p += 17 + 17;
+  get_vms_time (buf);
+  p = frag_more (17);
+  strcpy (p, buf);
+
+  p = frag_more (17);
+  strcpy (p, "24-FEB-2005 15:00");
+
+  p = frag_more (strlen (bname) + 1);
   strcpy (p, bname);
-  p += strlen (bname) + 1;
   free (bname);
+
+  p = frag_more (5);
   strcpy (p, "V1.0");
 
   frag_align (3, 0, 0);
@@ -11809,10 +11753,18 @@ ia64_vms_note (void)
   sprintf (buf, "GNU assembler version %s (%s) using BFD version %s",
 	   VERSION, TARGET_ALIAS, BFD_VERSION_STRING);
 
-  p = frag_more (8 + 8 + 8);
-  number_to_chars_littleendian (p + 0, 8, 8);
-  number_to_chars_littleendian (p + 8, strlen (buf) + 1, 8);
-  number_to_chars_littleendian (p + 16, NT_VMS_LNM, 8);
+  i_note.namesz = 8;
+  i_note.descsz = 1 + strlen (buf);
+  i_note.type = NT_VMS_LNM;
+
+  p = frag_more (sizeof (i_note.namesz));
+  number_to_chars_littleendian (p, i_note.namesz, 8);
+
+  p = frag_more (sizeof (i_note.descsz));
+  number_to_chars_littleendian (p, i_note.descsz, 8);
+
+  p = frag_more (sizeof (i_note.type));
+  number_to_chars_littleendian (p, i_note.type, 8);
 
   p = frag_more (8);
   strcpy (p, "IPF/VMS");
